k8s/pedidos-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedidos-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedidos
  template:
    metadata:
      labels:
        app: pedidos
    spec:
      containers:
        - name: pedidos-service
          image: fasapetri/pedidos-service:v1
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: pedidos-service
spec:
  selector:
    app: pedidos
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
