k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.local
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 8081
          - path: /plazoleta
            pathType: Prefix
            backend:
              service:
                name: plazoleta-service
                port:
                  number: 8082
          - path: /pedidos
            pathType: Prefix
            backend:
              service:
                name: pedidos-service
                port:
                  number: 8083
